--- a/GKE/HelloWorldRestAPI/pom.xml
+++ b/GKE/HelloWorldRestAPI/pom.xml
@@ -48,8 +48,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+			</plugin>			
 		</plugins>
+				<finalName>hello-world-rest-api-gke</finalName>		
 	</build>
 
 </project>
